--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-car",
   "version": "1.0.0",
+  "homepage": "/",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,9 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.53.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
